--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -40,7 +40,7 @@
           神経衰弱ゲーム</a></li>
           <li><a href="https://bajita19720814.github.io/dategame/.">時間と日付のゲーム</a></li>
           <li><a href="https://bajita19720814.github.io/busgame/.">バスの乗客ゲーム</a></li>
-          <li><a href="https://bajita19720814.github.io/shootinggame/.">シューティングゲーム</a></li>
+          <li><a href="https://bajita19720814.github.io/shootinggame/.">シューティングゲーム(PC用)</a></li>
         </ul>
       </section>
     </div>
