--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav>
     <div><p><a href="https://bajita19720814.github.io">ホーム</a></p></div>
     <div data-id="programing">
-      <p>試そう！プログラミング</p>
+      <p>体験しよう！</p>
       <section id="programing">
         <ul>
           <li><a href="https://bajita19720814.github.io/sitemake/.">HTML+CSS</a></li>
@@ -102,6 +102,7 @@ document.addEventListener('click', () => {
             <p>ブラウザでのファイルをリロードして文字をクリックするとクリックしたときの表示される内容が変わります。 </p>
             <img src="img/js4.png">
           </div>
+          <p>どうでしたか?HTMLやCSSと同じようにコードを書いたファイルをHTMLに読み込ませることによって、HTMLに変化を出すことができます。ミニゲームも作ってみたので、試してみてください。</p>
       </section>
       <section class="learnmore">
         <h2>無料の学習サイトを活用しよう</h2>
